# cesi

./: .dockerignore  .gitignore  CONTRIBUTORS.md  DEVELOPMENT.md  Dockerfile  LICENCE.md  MANIFEST.in  Makefile  Pipfile  README.md  authentication  cesi.conf  cesi.conf.example  cesi.conf.sample  cesi.default.conf  cesi.py  docker-compose.yml  env.sample  getProcInfo.py  installation.sh  pyproject.toml  requirements.txt  setup.py  supervisor-centralized.conf  supervisor-centralized.conf.example  userinfo.sql  web.py
.docker/: Dockerfile.backend  Dockerfile.frontend
.docker/supervisor/: analysis_supervisord.conf  monitoring_supervisord.conf  products_supervisord.conf
app/: decorators.py  util.py  web.py
app/templates/: login.html  page_not_found.html
cesi/: cesi.default.conf  cesi.py  controllers.py  core.py  decorators.py  loggers.py  models.py  routes.py  run.py  util.py  utils.py  web.py  wsgi.py
cesi.egg-info/: PKG-INFO  SOURCES.txt
cesi/api/: __init__.py  activitylogs.py  auth.py
cesi/auth/: __init__.py  basic.py  github.py
cesi/core/: __init__.py  cesi.py  environment.py  handlers.py  node.py  parser.py  process.py  xmlrpc.py
cesi/hosts/: __init__.py  docker_unixsock.py  file.py  inline.py
defaults/: cesi-uwsgi.ini  cesi.conf  cesi.conf.toml  cesi.service  cesi_conf.toml
docker-cesi/: Dockerfile  README.md
docs/: screenshots.md
lib/: getProcInfo.py
screenshots/: image1  image2
show_info/: show_info.py
static/: custom.css  custom.js
templates/: index.html  login.html
web/: event.php  getProcInfo.py  show_info.py  userinfo.db  web.py
(+104 files in other folders)
