[tool.poetry]
name = "cesi"
version = "2.6.3"
description = "CeSI is a web interface for managing multiple supervisors from the same place."
authors = ["Fatih Sarhan <f9n@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.4"
flask = "^1.0"
flask-sqlalchemy = "^2.3"
tomlkit = "^0.5.0"
psycopg2-binary = "^2.7"
pymysql = "^0.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
black = { version = "^18.9b0", python = "^3.6" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
